# PyLipidParse

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  docs.yml  publish.yml
claude-code-plugin/: .mcp.json  README.md
claude-code-plugin/.claude-plugin/: plugin.json
claude-code-plugin/skills/lipid-convert/: SKILL.md
docs/: api_reference.md  index.md  installation.md  mcp.md  supported_classes.md  usage.md
src/pylipidparse/: __init__.py  _compat.py  converter.py  exceptions.py  mcp_server.py
src/pylipidparse/builders/: __init__.py  base.py  fatty_acid.py  glycerolipid.py  glycerophospholipid.py  sphingolipid.py  sterol.py
src/pylipidparse/scaffolds/: __init__.py  headgroups.py  sterols.py
src/pylipidparse/utils/: __init__.py  chain.py
tests/: conftest.py  test_chain_unit.py  test_compat.py  test_converter.py  test_edge_cases.py  test_fatty_acid.py  test_fatty_acid_variants.py  test_glycerolipid.py  test_glycerophospholipid.py  test_inchikey_validation.py  test_mcp_server.py  test_outputs.py  test_performance.py  test_scaffolds.py  test_sphingolipid.py  test_sterol.py
